# student_grade_prediction

./: .gitignore  pyproject.toml  readme.md  student.csv  student_grades_prediction_linear_regression.ipynb  student_grades_prediction_linear_regression.py  student_grades_prediction_random_forest.ipynb  student_grades_prediction_random_forest.py
